# kubeflow-test

./: README.md  component.yaml  pipeline.yaml  pipeline_v2_example.ipynb  pyproject.toml
tests/: test_kubeflow_test.py
