[tool.poetry]
name = "kubeflow-test"
version = "0.1.0"
description = ""
authors = ["rasnes <rasmusnes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kfp = "^1.8.12"
ipykernel = "^6.11.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
